syntax = "proto3";

package netctrl.v1;

option go_package = "github.com/mfilanov/netctrl-server/pkg/api/v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// AgentService provides operations for agent registration and management
service AgentService {
  // RegisterAgent registers or updates an agent to a cluster
  rpc RegisterAgent(RegisterAgentRequest) returns (RegisterAgentResponse) {
    option (google.api.http) = {
      post: "/api/v1/agents/register"
      body: "*"
    };
  }

  // GetAgent retrieves an agent by ID
  rpc GetAgent(GetAgentRequest) returns (GetAgentResponse) {
    option (google.api.http) = {
      get: "/api/v1/agents/{id}"
    };
  }

  // ListAgents lists all agents, optionally filtered by cluster
  rpc ListAgents(ListAgentsRequest) returns (ListAgentsResponse) {
    option (google.api.http) = {
      get: "/api/v1/agents"
    };
  }

  // UnregisterAgent removes an agent
  rpc UnregisterAgent(UnregisterAgentRequest) returns (UnregisterAgentResponse) {
    option (google.api.http) = {
      delete: "/api/v1/agents/{id}"
    };
  }

  // GetInstructions polls for pending instructions
  // This serves as both instruction delivery and implicit healthcheck
  rpc GetInstructions(GetInstructionsRequest) returns (GetInstructionsResponse) {
    option (google.api.http) = {
      post: "/api/v1/agents/{agent_id}/instructions"
      body: "*"
    };
  }
}

// AgentStatus represents the current state of an agent
enum AgentStatus {
  AGENT_STATUS_UNSPECIFIED = 0;
  AGENT_STATUS_ACTIVE = 1;
  AGENT_STATUS_INACTIVE = 2;
}

// Agent represents a node agent registered to a cluster
message Agent {
  // Agent-generated UUID (hardware-based identifier)
  string id = 1;

  // Cluster ID this agent belongs to
  string cluster_id = 2;

  // Node hostname
  string hostname = 3;

  // Node IP address
  string ip_address = 4;

  // Agent version
  string version = 5;

  // Agent status
  AgentStatus status = 6;

  // Last registration or update time
  google.protobuf.Timestamp last_seen = 7;

  // Creation timestamp
  google.protobuf.Timestamp created_at = 8;

  // Last update timestamp
  google.protobuf.Timestamp updated_at = 9;
}

// RegisterAgentRequest contains parameters for registering an agent
message RegisterAgentRequest {
  // Agent-generated UUID (required)
  string id = 1;

  // Cluster ID (required)
  string cluster_id = 2;

  // Node hostname (optional)
  string hostname = 3;

  // Node IP address (optional)
  string ip_address = 4;

  // Agent version (optional)
  string version = 5;
}

// RegisterAgentResponse returns the registered agent
message RegisterAgentResponse {
  Agent agent = 1;
}

// GetAgentRequest contains parameters for retrieving an agent
message GetAgentRequest {
  // ID of the agent to retrieve
  string id = 1;
}

// GetAgentResponse returns the requested agent
message GetAgentResponse {
  Agent agent = 1;
}

// ListAgentsRequest contains parameters for listing agents
message ListAgentsRequest {
  // Optional cluster ID filter
  string cluster_id = 1;
}

// ListAgentsResponse returns a list of agents
message ListAgentsResponse {
  repeated Agent agents = 1;
}

// UnregisterAgentRequest contains parameters for unregistering an agent
message UnregisterAgentRequest {
  // ID of the agent to unregister
  string id = 1;
}

// UnregisterAgentResponse confirms unregistration
message UnregisterAgentResponse {
  // Whether the unregistration was successful
  bool success = 1;
}

// InstructionType defines the type of instruction
enum InstructionType {
  INSTRUCTION_TYPE_UNSPECIFIED = 0;

  // POLL_INTERVAL instructs the agent when to poll next
  INSTRUCTION_TYPE_POLL_INTERVAL = 1;

  // HEALTH_CHECK requests a health status report
  INSTRUCTION_TYPE_HEALTH_CHECK = 2;

  // Future instruction types can be added here:
  // INSTRUCTION_TYPE_RUN_COMMAND = 3;
  // INSTRUCTION_TYPE_UPDATE_CONFIG = 4;
  // INSTRUCTION_TYPE_COLLECT_METRICS = 5;
}

// Instruction represents a command or directive from the service to an agent
message Instruction {
  // Unique instruction ID
  string id = 1;

  // Type of instruction
  InstructionType type = 2;

  // Instruction payload (type-specific data as JSON)
  string payload = 3;

  // When the instruction was created
  google.protobuf.Timestamp created_at = 4;
}

// GetInstructionsRequest requests pending instructions for an agent
message GetInstructionsRequest {
  // ID of the agent requesting instructions
  string agent_id = 1;

  // Optional: ID of the last successfully processed instruction (acknowledgment)
  string last_instruction_id = 2;

  // Optional: Result data from the last instruction execution
  string result_data = 3;
}

// GetInstructionsResponse returns instructions and polling configuration
message GetInstructionsResponse {
  // List of pending instructions to execute
  repeated Instruction instructions = 1;

  // Seconds to wait before the next poll
  // Default behavior: agent should poll after this interval
  int32 poll_interval_seconds = 2;

  // Server timestamp when response was generated
  google.protobuf.Timestamp server_time = 3;
}
